# WindowsProcessControlCenter

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  RELEASE_NOTES.md
.github/: FUNDING.yml
Prompts/: 01_PROJECT_BOOTSTRAP.md  02_PROCESS_ENUMERATION.md  03_SAFE_PROCESS_ACTIONS.md  04_CPU_PRIORITY_MANAGEMENT.md  05_FREEZE_AND_RESUME_PROCESSES.md  06_GPU_PREFERENCE_MANAGEMENT.md  07_MODERN_GUI_AND_LAYOUT.md  08_ELEVATION_SAFETY_AND_GUARDS.md  09_SETTINGS_LOGS_AND_PERSISTENCE.md  10_TESTING_PACKAGING_AND_RELEASE.md  11_FINAL_POLISH_AND_QA.md  99_MASTER_PROMPT_ONE_SHOT.md  MANIFEST.md  README_START_HERE.md
docs/: GUI_LIBRARY_DECISION.md  RELEASE_CHECKLIST.md  prompt1.txt
installer/: WindowsProcessControlCenter.iss
resources/: WindowsProcessControlCenter.rc  resource.h
scripts/: build_installer.ps1  package_release.ps1
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: AutoApplyEngine.cpp  AutoApplyEngine.h  GpuPreferenceManager.cpp  GpuPreferenceManager.h  ProcessActions.cpp  ProcessActions.h  ProcessInfo.h  ProcessProvider.cpp  ProcessProvider.h  ProfileStore.cpp  ProfileStore.h  SettingsStore.cpp  SettingsStore.h
src/platform/: D3D11Renderer.cpp  D3D11Renderer.h  TrayIcon.cpp  TrayIcon.h  Win32Window.cpp  Win32Window.h
src/ui/: UiLayer.cpp  UiLayer.h  UiTheme.cpp  UiTheme.h
src/ui_web/: WebMessageBridge.cpp  WebMessageBridge.h  WebViewHost.cpp  WebViewHost.h
web/: app.js  index.html  styles.css
